# voio

./: .gitignore  LICENSE  README.md
analysis/: .Entry.cpp.swp  .LazyStrategy.cpp.swp  .SimpleFaceMain.cpp.swp  .SimpleFaceStrategy.cpp.swp  .compile.txt.swp  EmailPingback.c  Entry.cpp  Entry.cpp~  FaceDetector.cpp  FaceDetector.h  INTEGRATIONINTERFACE.txt  LazyStrategy.cpp  LazyStrategy.h  MotionAnalyzer.cpp  MotionAnalyzer.h  SimpleFaceMain.cpp  SimpleFaceMain.cpp~  SimpleFaceStrategy.cpp  SimpleFaceStrategy.cpp~  SimpleFaceStrategy.h  Strategy.h  a.out  compile.txt  libgif  libgif.so.7.0.0  main  main.cpp  makeSimpleFace  makefile  makefile~  mattstodo  motionmain  motionmain.cpp  simplemain  testmov.mov
analysis/Voio-CLM-framework/: CMakeLists.txt  Instructions.txt
analysis/Voio-CLM-framework/Analysis/: CMakeLists.txt  FaceDetector.cpp  FaceDetector.h  analysis.cpp  camDemo.cpp  main.cpp  timestamp.h
analysis/Voio-CLM-framework/READMEs/: ReadMeLast.txt  readme-ubuntu.txt
analysis/Voio-CLM-framework/Voio/Analysis/: CMakeLists.txt  FaceDetector.cpp  FaceDetector.h  Strategy.h  analysis.cpp  analysis.h  main.cpp  timestamp.cpp
analysis/Voio-CLM-framework/Voio/FunctionalityTest/: CMakeLists.txt  main.cpp
analysis/Voio-CLM-framework/lib/dlib/: CMakeLists.txt
analysis/Voio-CLM-framework/lib/local/CLM/: CMakeLists.txt
analysis/Voio-CLM-framework/lib/local/FaceAnalyser/: CMakeLists.txt
analysis/gifs/: fps.c  gifcv  gifcv.cc  gifcv.cpp  gifcv.h
dan/up/public/stylesheets/: style.css
dan/up/views/: index.ejs
db/journal/: j._0  lsn
emails/: risks.txt
nathanael/: app.js
nathanael/public/: profile.html  signup.html
nathanael/public/js/: scripts.js
partial_merge/: app.js  authentication_details(unimplemented).js  package.json
partial_merge/public/javascripts/: squares.js
partial_merge/public/stylesheets/: style.css
partial_merge/routes/: index.js
partial_merge/views/: head.ejs  index.ejs  user.ejs
test/4up/: app.js
test/4up/public/stylesheets/: leaguespartan-bold-webfont.eot
test/4up/views/: title.ejs  upload.ejs
test/up/: app.js
test/up/public/javascripts/uploader/: jquery.fileupload-ui.js
test/up/routes/: index.js
web/: app.js  email_details(unimplemented).js  index.html  oscar.pem  package.json  pass.js  scripts.js
web/app/: routes.js
web/app/models/: user.js
web/config/: gif.js  passport.js  passport_setup.js  transport.js  user.js
web/config/config/: database.js  passport.js
web/public/: index.html  login.html  profile.html  signup.html
web/public/css/: styles.css
web/public/javascripts/: feed-squares.js  gifffer.js  pending.js  squares.js  upload.js  user.js
web/public/js/: login.js  profile.js  signup.js
web/public/stylesheets/: home.css  style.css  user.css
web/routes/: index.js
web/site/: index.html  styles.css
web/views/: error.ejs  feed.ejs  gif.ejs  head.ejs  index.ejs  login.ejs  pending.ejs  profile.ejs  signup.ejs  temp-user.ejs  title.ejs  upload.ejs  user.ejs
